--- a/index.html
+++ b/index.html
@@ -772,7 +772,7 @@
             <h3>contact info</h3>
             <a href="#"> <i class="fas fa-phone"></i> +123-456-7890 </a>
             <a href="#"> <i class="fas fa-phone"></i> +111-222-3333 </a>
-            <a href="#"> <i class="fas fa-envelope"></i> shaikhanas@gmail.com </a>
+            <a href="#"> <i class="fas fa-envelope"></i> akash.ramjyothi@gmail.com </a>
             <img src="image/worldmap.png" class="map" alt="">
         </div>
         
