--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
         <i class="fas fa-shipping-fast"></i>
         <div class="content">
             <h3>free shipping</h3>
-            <p>order over $100</p>
+            <p>order over ₹100</p>
         </div>
     </div>
 
@@ -177,7 +177,7 @@
                 </div>
                 <div class="content">
                     <h3>featured books</h3>
-                    <div class="price">$15.99 <span>$20.99</span></div>
+                    <div class="price">₹15.99 <span>₹20.99</span></div>
                     <a href="#" class="btn">add to cart</a>
                 </div>
             </div>
@@ -193,7 +193,7 @@
                 </div>
                 <div class="content">
                     <h3>featured books</h3>
-                    <div class="price">$15.99 <span>$20.99</span></div>
+                    <div class="price">₹15.99 <span>₹20.99</span></div>
                     <a href="#" class="btn">add to cart</a>
                 </div>
             </div>
@@ -209,7 +209,7 @@
                 </div>
                 <div class="content">
                     <h3>featured books</h3>
-                    <div class="price">$15.99 <span>$20.99</span></div>
+                    <div class="price">₹15.99 <span>₹20.99</span></div>
                     <a href="#" class="btn">add to cart</a>
                 </div>
             </div>
@@ -225,7 +225,7 @@
                 </div>
                 <div class="content">
                     <h3>featured books</h3>
-                    <div class="price">$15.99 <span>$20.99</span></div>
+                    <div class="price">₹15.99 <span>₹20.99</span></div>
                     <a href="#" class="btn">add to cart</a>
                 </div>
             </div>
@@ -241,7 +241,7 @@
                 </div>
                 <div class="content">
                     <h3>featured books</h3>
-                    <div class="price">$15.99 <span>$20.99</span></div>
+                    <div class="price">₹15.99 <span>₹20.99</span></div>
                     <a href="#" class="btn">add to cart</a>
                 </div>
             </div>
@@ -257,7 +257,7 @@
                 </div>
                 <div class="content">
                     <h3>featured books</h3>
-                    <div class="price">$15.99 <span>$20.99</span></div>
+                    <div class="price">₹15.99 <span>₹20.99</span></div>
                     <a href="#" class="btn">add to cart</a>
                 </div>
             </div>
@@ -273,7 +273,7 @@
                 </div>
                 <div class="content">
                     <h3>featured books</h3>
-                    <div class="price">$15.99 <span>$20.99</span></div>
+                    <div class="price">₹15.99 <span>₹20.99</span></div>
                     <a href="#" class="btn">add to cart</a>
                 </div>
             </div>
@@ -289,7 +289,7 @@
                 </div>
                 <div class="content">
                     <h3>featured books</h3>
-                    <div class="price">$15.99 <span>$20.99</span></div>
+                    <div class="price">₹15.99 <span>₹20.99</span></div>
                     <a href="#" class="btn">add to cart</a>
                 </div>
             </div>
@@ -305,7 +305,7 @@
                 </div>
                 <div class="content">
                     <h3>featured books</h3>
-                    <div class="price">$15.99 <span>$20.99</span></div>
+                    <div class="price">₹15.99 <span>₹20.99</span></div>
                     <a href="#" class="btn">add to cart</a>
                 </div>
             </div>
@@ -321,7 +321,7 @@
                 </div>
                 <div class="content">
                     <h3>featured books</h3>
-                    <div class="price">$15.99 <span>$20.99</span></div>
+                    <div class="price">₹15.99 <span>₹20.99</span></div>
                     <a href="#" class="btn">add to cart</a>
                 </div>
             </div>
@@ -367,7 +367,7 @@
                 </div>
                 <div class="content">
                     <h3>new arrivals</h3>
-                    <div class="price">$15.99 <span>$20.99</span></div>
+                    <div class="price">₹15.99 <span>₹20.99</span></div>
                     <div class="stars">
                         <i class="fas fa-star"></i>
                         <i class="fas fa-star"></i>
@@ -384,7 +384,7 @@
                 </div>
                 <div class="content">
                     <h3>new arrivals</h3>
-                    <div class="price">$15.99 <span>$20.99</span></div>
+                    <div class="price">₹15.99 <span>₹20.99</span></div>
                     <div class="stars">
                         <i class="fas fa-star"></i>
                         <i class="fas fa-star"></i>
@@ -401,7 +401,7 @@
                 </div>
                 <div class="content">
                     <h3>new arrivals</h3>
-                    <div class="price">$15.99 <span>$20.99</span></div>
+                    <div class="price">₹15.99 <span>₹20.99</span></div>
                     <div class="stars">
                         <i class="fas fa-star"></i>
                         <i class="fas fa-star"></i>
@@ -418,7 +418,7 @@
                 </div>
                 <div class="content">
                     <h3>new arrivals</h3>
-                    <div class="price">$15.99 <span>$20.99</span></div>
+                    <div class="price">₹15.99 <span>₹20.99</span></div>
                     <div class="stars">
                         <i class="fas fa-star"></i>
                         <i class="fas fa-star"></i>
@@ -435,7 +435,7 @@
                 </div>
                 <div class="content">
                     <h3>new arrivals</h3>
-                    <div class="price">$15.99 <span>$20.99</span></div>
+                    <div class="price">₹15.99 <span>₹20.99</span></div>
                     <div class="stars">
                         <i class="fas fa-star"></i>
                         <i class="fas fa-star"></i>
@@ -460,7 +460,7 @@
                 </div>
                 <div class="content">
                     <h3>new arrivals</h3>
-                    <div class="price">$15.99 <span>$20.99</span></div>
+                    <div class="price">₹15.99 <span>₹20.99</span></div>
                     <div class="stars">
                         <i class="fas fa-star"></i>
                         <i class="fas fa-star"></i>
@@ -477,7 +477,7 @@
                 </div>
                 <div class="content">
                     <h3>new arrivals</h3>
-                    <div class="price">$15.99 <span>$20.99</span></div>
+                    <div class="price">₹15.99 <span>₹20.99</span></div>
                     <div class="stars">
                         <i class="fas fa-star"></i>
                         <i class="fas fa-star"></i>
@@ -494,7 +494,7 @@
                 </div>
                 <div class="content">
                     <h3>new arrivals</h3>
-                    <div class="price">$15.99 <span>$20.99</span></div>
+                    <div class="price">₹15.99 <span>₹20.99</span></div>
                     <div class="stars">
                         <i class="fas fa-star"></i>
                         <i class="fas fa-star"></i>
@@ -511,7 +511,7 @@
                 </div>
                 <div class="content">
                     <h3>new arrivals</h3>
-                    <div class="price">$15.99 <span>$20.99</span></div>
+                    <div class="price">₹15.99 <span>₹20.99</span></div>
                     <div class="stars">
                         <i class="fas fa-star"></i>
                         <i class="fas fa-star"></i>
@@ -528,7 +528,7 @@
                 </div>
                 <div class="content">
                     <h3>new arrivals</h3>
-                    <div class="price">$15.99 <span>$20.99</span></div>
+                    <div class="price">₹15.99 <span>₹20.99</span></div>
                     <div class="stars">
                         <i class="fas fa-star"></i>
                         <i class="fas fa-star"></i>
